--- a/lib/Module/CsvExport/locale/ja_JP/messages.po
+++ b/lib/Module/CsvExport/locale/ja_JP/messages.po
@@ -16,21 +16,21 @@ msgstr ""
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:45
 msgid "Invalid zone ID."
-msgstr ""
+msgstr "無効なゾーンIDです。"
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:64
 msgid "There is no zone with this ID."
-msgstr ""
+msgstr "このIDのゾーンは存在しません。"
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:72
 msgid "This zone does not have any records to export."
-msgstr ""
+msgstr "このゾーンにはエクスポートするレコードがありません。"
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:56
 msgid "You do not have permission to export this zone."
-msgstr ""
+msgstr "このゾーンをエクスポートする権限がありません。"
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:39
 msgid "You need to be logged in to export zone data."
-msgstr ""
+msgstr "ゾーンデータをエクスポートするにはログインが必要です。"
 
