--- a/lib/Module/CsvExport/locale/lt_LT/messages.po
+++ b/lib/Module/CsvExport/locale/lt_LT/messages.po
@@ -16,21 +16,21 @@ msgstr ""
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:45
 msgid "Invalid zone ID."
-msgstr ""
+msgstr "Neteisingas zonos ID."
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:64
 msgid "There is no zone with this ID."
-msgstr ""
+msgstr "Nėra zonos su šiuo ID."
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:72
 msgid "This zone does not have any records to export."
-msgstr ""
+msgstr "Ši zona neturi įrašų eksportavimui."
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:56
 msgid "You do not have permission to export this zone."
-msgstr ""
+msgstr "Neturite leidimo eksportuoti šios zonos."
 
 #: lib/Module/CsvExport/Controller/CsvExportController.php:39
 msgid "You need to be logged in to export zone data."
-msgstr ""
+msgstr "Norėdami eksportuoti zonos duomenis, turite būti prisijungę."
 
