--- a/lib/Module/ZoneImportExport/locale/en_EN/messages.po
+++ b/lib/Module/ZoneImportExport/locale/en_EN/messages.po
@@ -38,17 +38,9 @@ msgstr "Confirm import"
 msgid "Content"
 msgstr "Content"
 
-#: lib/Module/ZoneImportExport/templates/import.html:140
-msgid "Create new zone"
-msgstr "Create new zone"
-
 #: lib/Module/ZoneImportExport/templates/import.html:30
 msgid "Edit zone"
 msgstr "Edit zone"
-
-#: lib/Module/ZoneImportExport/templates/import.html:151
-msgid "Enter the ID of the zone to import records into."
-msgstr "Enter the ID of the zone to import records into."
 
 #: lib/Module/ZoneImportExport/Controller/ZoneFileImportController.php:222
 msgid "Failed to create zone."
@@ -94,14 +86,6 @@ msgstr "Import another zone"
 msgid "Import completed successfully."
 msgstr "Import completed successfully."
 
-#: lib/Module/ZoneImportExport/templates/import.html:144
-msgid "Import into existing zone"
-msgstr "Import into existing zone"
-
-#: lib/Module/ZoneImportExport/templates/import.html:137
-msgid "Import mode"
-msgstr "Import mode"
-
 #: lib/Module/ZoneImportExport/Controller/ZoneFileImportController.php:175
 msgid "Import session expired. Please upload the file again."
 msgstr "Import session expired. Please upload the file again."
@@ -110,6 +94,9 @@ msgstr "Import session expired. Please upload the file again."
 msgid "Invalid zone ID."
 msgstr "Invalid zone ID."
 
+msgid "Master"
+msgstr "Master"
+
 #: lib/Module/ZoneImportExport/templates/import.html:172
 msgid "Multi-line records"
 msgstr "Multi-line records"
@@ -117,6 +104,9 @@ msgstr "Multi-line records"
 #: lib/Module/ZoneImportExport/templates/import.html:66
 msgid "Name"
 msgstr "Name"
+
+msgid "Native"
+msgstr "Native"
 
 #: lib/Module/ZoneImportExport/Controller/ZoneFileImportController.php:116
 msgid "No valid records found in the uploaded file."
@@ -130,10 +120,6 @@ msgstr "Please select a valid zone file to upload."
 msgid "Priority"
 msgstr "Priority"
 
-#: lib/Module/ZoneImportExport/templates/import.html:149
-msgid "Select zone"
-msgstr "Select zone"
-
 #: lib/Module/ZoneImportExport/templates/import.html:133
 msgid "Standard BIND zone file format. Max size:"
 msgstr "Standard BIND zone file format. Max size:"
@@ -145,6 +131,9 @@ msgstr "Standard BIND zone files"
 #: lib/Module/ZoneImportExport/templates/import.html:165
 msgid "Supported formats"
 msgstr "Supported formats"
+
+msgid "Success:"
+msgstr "Success:"
 
 #: lib/Module/ZoneImportExport/templates/import.html:69
 msgid "TTL"
@@ -174,6 +163,9 @@ msgstr "Type"
 msgid "Upload and preview"
 msgstr "Upload and preview"
 
+msgid "Warning:"
+msgstr "Warning:"
+
 #: lib/Module/ZoneImportExport/templates/import.html:48
 msgid "Warnings:"
 msgstr "Warnings:"
@@ -186,10 +178,6 @@ msgstr "You do not have permission to add zones."
 #: lib/Module/ZoneImportExport/Controller/ZoneFileExportController.php:59
 msgid "You do not have permission to export this zone."
 msgstr "You do not have permission to export this zone."
-
-#: lib/Module/ZoneImportExport/Controller/ZoneFileImportController.php:203
-msgid "You do not have permission to modify this zone."
-msgstr "You do not have permission to modify this zone."
 
 #: lib/Module/ZoneImportExport/Controller/ZoneFileExportController.php:42
 msgid "You need to be logged in to export zone data."
